--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
-DB_NAME=db_mmk
 DB_HOST=127.0.0.1
 DB_USER=postgres
+AWS_DB_PASS=mmkaws*()
 DB_PASS=zxpd450
-REDIS_URL=redis://:@0.0.0.0:6379/0
+PROD_REDIS_URL=redis://:@0.0.0.0:6379/0
+TEST_REDIS_URL=redis://:@0.0.0.0:6379/1
+DEV_REDIS_URL=redis://:@0.0.0.0:6379/2
