--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ Cerberus==1.3.4
 click==8.1.2
 Deprecated==1.2.13
 Flask==2.1.1
+Flask-And-Redis==1.0.0
 flask-apispec==0.11.1
 Flask-Caching==1.10.1
 flask-expects-json==1.7.0
 Flask-HTTPAuth==4.5.0
 Flask-Inputs==0.3.0
-flask-redis==0.4.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 future==0.18.2
