finalized env variable

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
-DB_HOST=127.0.0.1
+DB_HOST=database-1.ciho62q4ldo0.us-east-2.rds.amazonaws.com
 DB_USER=postgres
-AWS_DB_PASS=mmkaws*()
-DB_PASS=zxpd450
+DB_PASS=mmkaws*()
 PROD_REDIS_URL=redis://:@0.0.0.0:6379/0
 TEST_REDIS_URL=redis://:@0.0.0.0:6379/1
 DEV_REDIS_URL=redis://:@0.0.0.0:6379/2
