--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==21.4.0
 Cerberus==1.3.4
 click==8.1.2
 Deprecated==1.2.13
+dump==0.0.5
 Flask==2.1.1
 Flask-And-Redis==1.0.0
 flask-apispec==0.11.1
@@ -16,6 +17,7 @@ Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 future==0.18.2
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.11.3
 importlib-resources==5.7.0
 iniconfig==1.1.1
