--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,13 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+env:
+  DB_HOST: database-1.ciho62q4ldo0.us-east-2.rds.amazonaws.com
+  DB_USER: postgres
+  DB_PASS: mmkaws*()
+  PROD_REDIS_URL: redis://:@0.0.0.0:6379/0
+  TEST_REDIS_URL: redis://:@0.0.0.0:6379/1
+  DEV_REDIS_URL: redis://:@0.0.0.0:6379/2
 jobs:
   build:
 
