--- a/.github/workflows/worfklow.yml
+++ b/.github/workflows/worfklow.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 env:
-  DB_HOST: database-1.ciho62q4ldo0.us-east-2.rds.amazonaws.com
-  DB_USER: postgres
-  DB_PASS: mmkaws*()
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASS: ${secrets.DB_PASS}}
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -26,3 +26,22 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+  cd:
+    runs-on: ubuntu-latest
+    needs: [ci]
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+      - name: Create CodeDeploy Deployment
+        id: deploy
+        run: |
+        aws deploy create-deployment \
+            --application-name mmk \
+            --deployment-group-name mmk-deployment-group \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
