fixed workflow file

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ on:
 env:
   DB_HOST: ${{ secrets.DB_HOST }}
   DB_USER: ${{ secrets.DB_USER }}
-  DB_PASS: ${secrets.DB_PASS}}
+  DB_PASS: ${{ secrets.DB_PASS }}
 jobs:
   ci:
     runs-on: ubuntu-latest
